force-app/main/default/objects/DataLakeDummy__c/DataLakeDummy__c.object-meta.xml
<CustomObject>
    <description>IF-125 필드와 동일한 오브젝트로
DataLake가 사업기회 데이터를 보기위한 용도</description>
    <label>DataLakeDummy</label>
    <nameField>
        <label>DataLake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataLakeDummy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>