force-app/main/default/objects/DataLakeDummy__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>MDG 고객코드</description>
    <label>AccountNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>