force-app/main/default/objects/DataLakeDummy__c/fields/AM_EMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>AM_EMP_NAME__c</fullName>
    <description>고객오너(영업대표) 명</description>
    <label>AM_EMP_NAME</label>
    <length>20</length>
    <type>Text</type>
</CustomField>