force-app/main/default/objects/DataLakeDummy__c/fields/AM_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>AM_EMP_NO__c</fullName>
    <description>고객오너(영업대표)</description>
    <label>AM_EMP_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>