force-app/main/default/objects/DataLakeDummy__c/fields/BID_EST_DTM__c.field-meta.xml
<CustomField>
    <fullName>BID_EST_DTM__c</fullName>
    <description>입찰 마감일</description>
    <label>BID_EST_DTM</label>
    <length>8</length>
    <type>Text</type>
</CustomField>