force-app/main/default/objects/DataLakeDummy__c/fields/BID_METHOD__c.field-meta.xml
<CustomField>
    <fullName>BID_METHOD__c</fullName>
    <description>입찰 방식</description>
    <label>BID_METHOD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>