force-app/main/default/objects/DataLakeDummy__c/fields/BIZ_FROM_DT__c.field-meta.xml
<CustomField>
    <fullName>BIZ_FROM_DT__c</fullName>
    <description>개발시작일</description>
    <label>BIZ_FROM_DT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>