force-app/main/default/objects/DataLakeDummy__c/fields/BIZ_TO_DT__c.field-meta.xml
<CustomField>
    <fullName>BIZ_TO_DT__c</fullName>
    <label>BIZ_TO_DT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>