force-app/main/default/objects/DataLakeDummy__c/fields/BIZ_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BIZ_TYPE__c</fullName>
    <description>사업 유형</description>
    <label>BIZ_TYPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>