force-app/main/default/objects/DataLakeDummy__c/fields/BIZ_TYPE_NM__c.field-meta.xml
<CustomField>
    <fullName>BIZ_TYPE_NM__c</fullName>
    <description>사업 유형명</description>
    <label>BIZ_TYPE_NM</label>
    <length>60</length>
    <type>Text</type>
</CustomField>