force-app/main/default/objects/DataLakeDummy__c/fields/BO_CLASS__c.field-meta.xml
<CustomField>
    <fullName>BO_CLASS__c</fullName>
    <description>사업 등급</description>
    <label>BO_CLASS</label>
    <length>2</length>
    <type>Text</type>
</CustomField>