force-app/main/default/objects/DataLakeDummy__c/fields/BO_CONFIRM_YN__c.field-meta.xml
<CustomField>
    <fullName>BO_CONFIRM_YN__c</fullName>
    <description>BO 점검 확정여부</description>
    <label>BO_CONFIRM_YN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>