force-app/main/default/objects/DataLakeDummy__c/fields/BO_LBS_CLASS__c.field-meta.xml
<CustomField>
    <fullName>BO_LBS_CLASS__c</fullName>
    <description>&quot;사업팀 정의 속성
(RLBS산업유형코드)&quot;</description>
    <label>BO_LBS_CLASS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>