force-app/main/default/objects/DataLakeDummy__c/fields/BO_OVERVIEW__c.field-meta.xml
<CustomField>
    <fullName>BO_OVERVIEW__c</fullName>
    <description>사업기회 개요</description>
    <label>BO_OVERVIEW</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>