force-app/main/default/objects/DataLakeDummy__c/fields/BO_RECORD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BO_RECORD_TYPE__c</fullName>
    <description>사업유형 레코드 타입</description>
    <label>BO_RECORD_TYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>