force-app/main/default/objects/DataLakeDummy__c/fields/BusinessType2__c.field-meta.xml
<CustomField>
    <fullName>BusinessType2__c</fullName>
    <description>사업유형2</description>
    <label>BusinessType2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>