force-app/main/default/objects/DataLakeDummy__c/fields/CELLO_URL__c.field-meta.xml
<CustomField>
    <fullName>CELLO_URL__c</fullName>
    <description>Opportunity 링크URL</description>
    <label>CELLO_URL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>