force-app/main/default/objects/DataLakeDummy__c/fields/CGUBUN_ID__c.field-meta.xml
<CustomField>
    <fullName>CGUBUN_ID__c</fullName>
    <description>&quot;사업팀 정의 속성
(거점코드)&quot;</description>
    <label>CGUBUN_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>