force-app/main/default/objects/DataLakeDummy__c/fields/COMPANY__c.field-meta.xml
<CustomField>
    <fullName>COMPANY__c</fullName>
    <description>Company</description>
    <label>COMPANY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>