force-app/main/default/objects/DataLakeDummy__c/fields/COMPANY_ID__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_ID__c</fullName>
    <description>고객사 코드</description>
    <label>COMPANY_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>