force-app/main/default/objects/DataLakeDummy__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <description>건설 여부</description>
    <label>Construction</label>
    <length>1</length>
    <type>Text</type>
</CustomField>