force-app/main/default/objects/DataLakeDummy__c/fields/CONTRACT_TERM_FROM__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TERM_FROM__c</fullName>
    <description>(계약)매출 시작일</description>
    <label>CONTRACT_TERM_FROM</label>
    <length>8</length>
    <type>Text</type>
</CustomField>