force-app/main/default/objects/DataLakeDummy__c/fields/CONTRACT_TERM_TO__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TERM_TO__c</fullName>
    <description>(계약)매출 종료일</description>
    <label>CONTRACT_TERM_TO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>