force-app/main/default/objects/DataLakeDummy__c/fields/CURRENCY_CODE__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY_CODE__c</fullName>
    <description>사업 기회 금액의 통화</description>
    <label>CURRENCY_CODE</label>
    <length>6</length>
    <type>Text</type>
</CustomField>