force-app/main/default/objects/DataLakeDummy__c/fields/DealBreak__c.field-meta.xml
<CustomField>
    <fullName>DealBreak__c</fullName>
    <description>Deal Break</description>
    <label>DealBreak</label>
    <length>1</length>
    <type>Text</type>
</CustomField>