force-app/main/default/objects/DataLakeDummy__c/fields/DEVELOP_DEPT_CODE__c.field-meta.xml
<CustomField>
    <fullName>DEVELOP_DEPT_CODE__c</fullName>
    <description>주 매출 부서(인사코드)</description>
    <label>DEVELOP_DEPT_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>