force-app/main/default/objects/DataLakeDummy__c/fields/DEVELOP_DEPT_COST_CENTER__c.field-meta.xml
<CustomField>
    <fullName>DEVELOP_DEPT_COST_CENTER__c</fullName>
    <description>주 매출 부서</description>
    <label>DEVELOP_DEPT_COST_CENTER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>