force-app/main/default/objects/DataLakeDummy__c/fields/DLVRY_AREA_CCD__c.field-meta.xml
<CustomField>
    <fullName>DLVRY_AREA_CCD__c</fullName>
    <description>매출 권역</description>
    <label>DLVRY_AREA_CCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>