force-app/main/default/objects/DataLakeDummy__c/fields/DLVRY_PRNT_ORG_CD__c.field-meta.xml
<CustomField>
    <fullName>DLVRY_PRNT_ORG_CD__c</fullName>
    <description>매출 거점</description>
    <label>DLVRY_PRNT_ORG_CD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>