force-app/main/default/objects/DataLakeDummy__c/fields/Drop_Reason_CD__c.field-meta.xml
<CustomField>
    <fullName>Drop_Reason_CD__c</fullName>
    <description>중도종결 사유코드</description>
    <label>Drop_Reason_CD</label>
    <length>14</length>
    <type>Text</type>
</CustomField>