force-app/main/default/objects/DataLakeDummy__c/fields/Drop_Reason_Desc__c.field-meta.xml
<CustomField>
    <fullName>Drop_Reason_Desc__c</fullName>
    <description>중도종결 사유 Description</description>
    <label>Drop_Reason_Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>