force-app/main/default/objects/DataLakeDummy__c/fields/EXEC_PM_NO__c.field-meta.xml
<CustomField>
    <fullName>EXEC_PM_NO__c</fullName>
    <description>실행PM 사번</description>
    <label>EXEC_PM_NO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>