force-app/main/default/objects/DataLakeDummy__c/fields/FLAG__c.field-meta.xml
<CustomField>
    <fullName>FLAG__c</fullName>
    <description>삭제 여부</description>
    <label>FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>