force-app/main/default/objects/DataLakeDummy__c/fields/IN_OUT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>IN_OUT_TYPE__c</fullName>
    <description>그룹 내 사업 여부</description>
    <label>IN_OUT_TYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>