force-app/main/default/objects/DataLakeDummy__c/fields/INPUT_P__c.field-meta.xml
<CustomField>
    <fullName>INPUT_P__c</fullName>
    <description>선투입</description>
    <label>INPUT_P</label>
    <length>1</length>
    <type>Text</type>
</CustomField>