force-app/main/default/objects/DataLakeDummy__c/fields/KEY_ACCOUNT_YN__c.field-meta.xml
<CustomField>
    <fullName>KEY_ACCOUNT_YN__c</fullName>
    <description>&quot;사업팀 정의 속성
(키어카운트여부)&quot;</description>
    <label>KEY_ACCOUNT_YN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>