force-app/main/default/objects/DataLakeDummy__c/fields/LBS_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>LBS_Exception_Type__c</fullName>
    <description>예외 :LBS 유형 확인</description>
    <label>LBS Exception Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>