force-app/main/default/objects/DataLakeDummy__c/fields/LegalReviewNo__c.field-meta.xml
<CustomField>
    <fullName>LegalReviewNo__c</fullName>
    <description>법무 검토 번호</description>
    <label>LegalReviewNo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>