force-app/main/default/objects/DataLakeDummy__c/fields/LOCAL_CURRENCY_CODE__c.field-meta.xml
<CustomField>
    <fullName>LOCAL_CURRENCY_CODE__c</fullName>
    <description>로컬 통화</description>
    <label>LOCAL_CURRENCY_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>