force-app/main/default/objects/DataLakeDummy__c/fields/LOCAL_ORDER_AMT__c.field-meta.xml
<CustomField>
    <fullName>LOCAL_ORDER_AMT__c</fullName>
    <description>계약 수주액(로컬 통화)</description>
    <label>LOCAL_ORDER_AMT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>