force-app/main/default/objects/DataLakeDummy__c/fields/Lost_Reason_CD__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_CD__c</fullName>
    <description>실주 사유코드</description>
    <label>Lost_Reason_CD</label>
    <length>14</length>
    <type>Text</type>
</CustomField>