force-app/main/default/objects/DataLakeDummy__c/fields/Lost_Reason_Desc__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Desc__c</fullName>
    <description>실주 사유 Description</description>
    <label>Lost_Reason_Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>