force-app/main/default/objects/DataLakeDummy__c/fields/ORDER_AMT_KRW__c.field-meta.xml
<CustomField>
    <fullName>ORDER_AMT_KRW__c</fullName>
    <description>KRW로 환상된 예상금액</description>
    <label>ORDER_AMT_KRW</label>
    <length>20</length>
    <type>Text</type>
</CustomField>