force-app/main/default/objects/DataLakeDummy__c/fields/ORDER_ID__c.field-meta.xml
<CustomField>
    <fullName>ORDER_ID__c</fullName>
    <label>ORDER_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>