force-app/main/default/objects/DataLakeDummy__c/fields/ORDER_NAME__c.field-meta.xml
<CustomField>
    <fullName>ORDER_NAME__c</fullName>
    <description>BO 명</description>
    <label>ORDER_NAME</label>
    <length>80</length>
    <type>Text</type>
</CustomField>