force-app/main/default/objects/DataLakeDummy__c/fields/ORDER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ORDER_TYPE__c</fullName>
    <description>사업기회 유형</description>
    <label>ORDER_TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>