force-app/main/default/objects/DataLakeDummy__c/fields/ORGIN_ACCOUNT_DESC__c.field-meta.xml
<CustomField>
    <fullName>ORGIN_ACCOUNT_DESC__c</fullName>
    <description>원청사 고객명</description>
    <label>ORGIN_ACCOUNT_DESC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>