force-app/main/default/objects/DataLakeDummy__c/fields/ORIGINAL_COMPANY_ID__c.field-meta.xml
<CustomField>
    <fullName>ORIGINAL_COMPANY_ID__c</fullName>
    <description>원청사 고객</description>
    <label>ORIGINAL_COMPANY_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>