force-app/main/default/objects/DataLakeDummy__c/fields/PROPOSAL_EMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>PROPOSAL_EMP_NAME__c</fullName>
    <description>제안PM명</description>
    <label>PROPOSAL_EMP_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>