force-app/main/default/objects/DataLakeDummy__c/fields/PROPOSAL_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>PROPOSAL_EMP_NO__c</fullName>
    <description>제안PM사번</description>
    <label>PROPOSAL_EMP_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>