force-app/main/default/objects/DataLakeDummy__c/fields/REG_DATE__c.field-meta.xml
<CustomField>
    <fullName>REG_DATE__c</fullName>
    <description>Opportunity 등록일</description>
    <label>REG_DATE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>