force-app/main/default/objects/DataLakeDummy__c/fields/REG_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>REG_EMP_NO__c</fullName>
    <description>Opportunity 등록자 사번</description>
    <label>REG_EMP_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>