force-app/main/default/objects/DataLakeDummy__c/fields/REUSE__c.field-meta.xml
<CustomField>
    <fullName>REUSE__c</fullName>
    <description>재활용필요성여부</description>
    <label>REUSE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>