force-app/main/default/objects/DataLakeDummy__c/fields/REUSE_REASON__c.field-meta.xml
<CustomField>
    <fullName>REUSE_REASON__c</fullName>
    <description>재활용필요성여부 사유</description>
    <label>REUSE_REASON</label>
    <length>50</length>
    <type>Text</type>
</CustomField>