force-app/main/default/objects/DataLakeDummy__c/fields/RLBS_BIZ_TCD__c.field-meta.xml
<CustomField>
    <fullName>RLBS_BIZ_TCD__c</fullName>
    <description>물류 서비스 범위</description>
    <label>RLBS_BIZ_TCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>