force-app/main/default/objects/DataLakeDummy__c/fields/RLBS_IND_TCD__c.field-meta.xml
<CustomField>
    <fullName>RLBS_IND_TCD__c</fullName>
    <description>물류 업종</description>
    <label>RLBS_IND_TCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>