force-app/main/default/objects/DataLakeDummy__c/fields/RLBS_PJT_TCD__c.field-meta.xml
<CustomField>
    <fullName>RLBS_PJT_TCD__c</fullName>
    <description>사업 개발 유형</description>
    <label>RLBS_PJT_TCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>