force-app/main/default/objects/DataLakeDummy__c/fields/RLBS_SVC_TCD__c.field-meta.xml
<CustomField>
    <fullName>RLBS_SVC_TCD__c</fullName>
    <description>물류 서비스 영역</description>
    <label>RLBS_SVC_TCD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>