force-app/main/default/objects/DataLakeDummy__c/fields/SALES_AREA_CCD__c.field-meta.xml
<CustomField>
    <fullName>SALES_AREA_CCD__c</fullName>
    <description>수주 권역</description>
    <label>SALES_AREA_CCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>