force-app/main/default/objects/DataLakeDummy__c/fields/SALES_COST_CD__c.field-meta.xml
<CustomField>
    <fullName>SALES_COST_CD__c</fullName>
    <description>&quot;사업팀 정의 속성
(원가귀속부서)&quot;</description>
    <label>SALES_COST_CD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>