force-app/main/default/objects/DataLakeDummy__c/fields/SALES_DEPT_CODE__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPT_CODE__c</fullName>
    <description>수주 사업그룹(인사코드)</description>
    <label>SALES_DEPT_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>