force-app/main/default/objects/DataLakeDummy__c/fields/SALES_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>SALES_EMP_NO__c</fullName>
    <description>영업대표사번</description>
    <label>SALES_EMP_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>