force-app/main/default/objects/DataLakeDummy__c/fields/SALES_PHASE__c.field-meta.xml
<CustomField>
    <fullName>SALES_PHASE__c</fullName>
    <description>단계</description>
    <label>SALES_PHASE</label>
    <length>3</length>
    <type>Text</type>
</CustomField>