force-app/main/default/objects/DataLakeDummy__c/fields/SAP_COMPANY__c.field-meta.xml
<CustomField>
    <fullName>SAP_COMPANY__c</fullName>
    <description>Company Code</description>
    <label>SAP_COMPANY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>