force-app/main/default/objects/DataLakeDummy__c/fields/SFDC_URL__c.field-meta.xml
<CustomField>
    <fullName>SFDC_URL__c</fullName>
    <label>SFDC_URL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>