force-app/main/default/objects/DataLakeDummy__c/fields/SHPR_CCD__c.field-meta.xml
<CustomField>
    <fullName>SHPR_CCD__c</fullName>
    <description>화주구분코드</description>
    <label>SHPR_CCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>