force-app/main/default/objects/DataLakeDummy__c/fields/UDATE_DROP__c.field-meta.xml
<CustomField>
    <fullName>UDATE_DROP__c</fullName>
    <description>BO Activity 사업불참결정/사업중도종결 시, 종료일자</description>
    <label>UDATE_DROP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>