force-app/main/default/objects/DataLakeDummy__c/fields/UDATE_LOSE__c.field-meta.xml
<CustomField>
    <fullName>UDATE_LOSE__c</fullName>
    <description>BO Activity 실주시, 종료일자</description>
    <label>UDATE_LOSE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>