force-app/main/default/objects/DataLakeDummy__c/fields/UDATE_VRB__c.field-meta.xml
<CustomField>
    <fullName>UDATE_VRB__c</fullName>
    <description>BO Activity 수전위 품의 시, 종료일자</description>
    <label>UDATE_VRB</label>
    <length>8</length>
    <type>Text</type>
</CustomField>