force-app/main/default/objects/DataLakeDummy__c/fields/UDATE_ZP21__c.field-meta.xml
<CustomField>
    <fullName>UDATE_ZP21__c</fullName>
    <description>BO Activity 사업기회검토 시, 종료일자</description>
    <label>UDATE_ZP21</label>
    <length>8</length>
    <type>Text</type>
</CustomField>