force-app/main/default/objects/DataLakeDummy__c/fields/UPD_PERSON_ID__c.field-meta.xml
<CustomField>
    <fullName>UPD_PERSON_ID__c</fullName>
    <description>Last Modified By ID</description>
    <label>UPD_PERSON_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>