force-app/main/default/objects/DataLakeDummy__c/fields/UPDATE_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>UPDATE_EMP_NO__c</fullName>
    <description>Opportunity 수정자 사번</description>
    <label>UPDATE_EMP_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>