force-app/main/default/objects/DataLakeDummy__c/fields/VRB_TYPE_MODI__c.field-meta.xml
<CustomField>
    <fullName>VRB_TYPE_MODI__c</fullName>
    <description>사업심의유형 변경여부</description>
    <label>VRB_TYPE_MODI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>