force-app/main/default/objects/DataLakeDummy__c/fields/VRB_TYPE_MODI_ID__c.field-meta.xml
<CustomField>
    <fullName>VRB_TYPE_MODI_ID__c</fullName>
    <description>사업심의유형 변경자</description>
    <label>VRB_TYPE_MODI_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>