force-app/main/default/objects/DataLakeDummy__c/fields/ZZACONT__c.field-meta.xml
<CustomField>
    <fullName>ZZACONT__c</fullName>
    <description>계약대행 여부</description>
    <label>ZZACONT</label>
    <length>1</length>
    <type>Text</type>
</CustomField>