force-app/main/default/objects/DataLakeDummy__c/fields/ZZACONT_EX__c.field-meta.xml
<CustomField>
    <fullName>ZZACONT_EX__c</fullName>
    <description>계약대행 예외처리 여부</description>
    <label>ZZACONT_EX</label>
    <length>1</length>
    <type>Text</type>
</CustomField>