force-app/main/default/objects/DataLakeDummy__c/fields/ZZCOOPER__c.field-meta.xml
<CustomField>
    <fullName>ZZCOOPER__c</fullName>
    <description>법인 협업 여부</description>
    <label>ZZCOOPER</label>
    <length>1</length>
    <type>Text</type>
</CustomField>