force-app/main/default/objects/DataLakeDummy__c/fields/ZZSALESSTR__c.field-meta.xml
<CustomField>
    <fullName>ZZSALESSTR__c</fullName>
    <description>수주전략세션 수행 여부</description>
    <label>ZZSALESSTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>