force-app/main/default/objects/DataLakeDummy__c/fields/ZZSTATUS__c.field-meta.xml
<CustomField>
    <fullName>ZZSTATUS__c</fullName>
    <description>BO Activity Status</description>
    <label>ZZSTATUS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>