force-app/main/default/objects/DataLakeDummy__c/fields/ZZVRB_FQ_T__c.field-meta.xml
<CustomField>
    <fullName>ZZVRB_FQ_T__c</fullName>
    <description>VRB 유형</description>
    <label>ZZVRB_FQ_T</label>
    <length>60</length>
    <type>Text</type>
</CustomField>